add sim setup and M code

--- a/configs/by_machine/ILAM510C_3Axis/ILAM510C_3Axis_sim.ini
+++ b/configs/by_machine/ILAM510C_3Axis/ILAM510C_3Axis_sim.ini
@@ -56,7 +56,7 @@ TOOL_TABLE = sim.tbl
 [RS274NGC]
 PARAMETER_FILE = qtdragon.var
 RS274NGC_STARTUP_CODE = G17 G21 G40 G43H0 G54 G64P0.005 G80 G90 G94 G97 M5 M9
-SUBROUTINE_PATH = ~/linuxcnc/configs/qtdragon/macros
+SUBROUTINE_PATH = ~/linuxcnc/configs/qt_510c/macros
 FEATURES=12
 
 [EMCMOT]
@@ -80,9 +80,9 @@ SPINDLES = 1
 
 [HAL]
 HALUI = halui
-HALFILE = ILAM510C_3Axis.hal
+HALFILE = core_sim.hal
+HALFILE = simulated_home.hal
 POSTGUI_HALFILE = qtdragon_postgui.hal
-MB2HAL = modbus.hal
 
 [HALUI]
 # no content
@@ -110,11 +110,13 @@ MAX_ACCELERATION = 80.0
 #LINEAR & ANGULAR
 TYPE = LINEAR
 HOME = 0.0
-HOME_OFFSET = -5.0
+HOME_OFFSET = -5.00000
+HOME_SEARCH_VEL = 20.000000
+HOME_LATCH_VEL = 10.000
 HOME_SEQUENCE = 1
-HOME_SEARCH_VEL = -6
-HOME_LATCH_VEL = 5
-HOME_IGNORE_LIMITS = yes
+HOME_USE_INDEX = NO
+HOME_IGNORE_LIMITS = NO
+#HOME_IS_SHARED = 0
 MAX_VELOCITY = 30.0
 MAX_ACCELERATION = 80.0
 #=INPUT_SCALE
@@ -126,16 +128,6 @@ MIN_FERROR = 0.1
 MIN_LIMIT = -5.0
 MAX_LIMIT = 550.0
 
-# Position controller parameters
-P = 450000
-I = 0
-D = 4000
-FF0 = 0
-FF1 = 0.01
-FF2 = 22.5
-DEADBAND = 1e-05
-MAX_OUTPUT = 100000
-
 [AXIS_Y]
 MIN_LIMIT = -5.0
 MAX_LIMIT = 500.0
@@ -145,12 +137,13 @@ MAX_ACCELERATION = 80.0
 [JOINT_1]
 #LINEAR & ANGULAR
 TYPE = LINEAR
-HOME = 0.0
-HOME_OFFSET = -5.0
+HOME = 5.0
+HOME_OFFSET = 0.000000
+HOME_SEARCH_VEL = 20.00
+HOME_LATCH_VEL = 10.00
 HOME_SEQUENCE = 1
-HOME_SEARCH_VEL = -6
-HOME_LATCH_VEL = 5
-HOME_IGNORE_LIMITS = yes
+HOME_USE_INDEX = NO
+HOME_IGNORE_LIMITS = NO
 MAX_VELOCITY = 60.0
 MAX_ACCELERATION = 80.0
 #=INPUT_SCALE
@@ -162,16 +155,6 @@ MIN_FERROR = 0.01
 MIN_LIMIT = -5.0
 MAX_LIMIT = 500.0
 
-# Position controller parameters
-P = 450000
-I = 0
-D = 0
-FF0 = 0
-FF1 = 0.01
-FF2 = 22.5
-DEADBAND = 1e-05
-MAX_OUTPUT = 100000
-
 [AXIS_Z]
 MIN_LIMIT = -5.0
 MAX_LIMIT = 300.0
@@ -181,12 +164,14 @@ MAX_ACCELERATION = 20.0
 [JOINT_2]
 #LINEAR & ANGULAR
 TYPE = LINEAR
-HOME = 0.0
-HOME_OFFSET = -5.0
-HOME_SEQUENCE = 0
-HOME_SEARCH_VEL = -6
-HOME_LATCH_VEL = 5
-HOME_IGNORE_LIMITS = yes
+HOME = 5.0
+HOME_OFFSET = 0.000000
+HOME_SEARCH_VEL = 20.000000
+HOME_LATCH_VEL = 10.00
+HOME_SEQUENCE = 1
+HOME_USE_INDEX = NO
+HOME_IGNORE_LIMITS = NO
+#HOME_IS_SHARED = 0
 MAX_VELOCITY = 30.0
 MAX_ACCELERATION = 20.0
 #=INPUT_SCALE
@@ -197,16 +182,6 @@ FERROR = 10
 MIN_FERROR = 1
 MIN_LIMIT = -5.0
 MAX_LIMIT = 300.0
-
-# Position controller parameters
-P = 450000
-I = 0
-D = 0
-FF0 = 0
-FF1 = 0.01
-FF2 = 22.5
-DEADBAND = 1e-05
-MAX_OUTPUT = 100000
 
 [SPINDLE]
 SPINDLE_TYPE = openLoop
