--- a/configs/by_machine/ChangDian_3Axis/ChangDian_3Axis.ini
+++ b/configs/by_machine/ChangDian_3Axis/ChangDian_3Axis.ini
@@ -75,6 +75,8 @@ LINEAR_UNITS = mm
 ANGULAR_UNITS = degree
 MAX_LINEAR_VELOCITY = 30.00
 DEFAULT_LINEAR_VELOCITY = 10.00
+NO_FORCE_HOMING = 1
+POSITION_FILE = position.txt
 
 [HAL]
 HALUI = halui
@@ -108,11 +110,12 @@ MAX_ACCELERATION = 80.0
 #LINEAR & ANGULAR
 TYPE = LINEAR
 HOME = 0.0
-HOME_OFFSET = -5.0
+HOME_OFFSET = 0.0
 HOME_SEQUENCE = 1
 HOME_SEARCH_VEL = -6
 HOME_LATCH_VEL = 5
 HOME_IGNORE_LIMITS = yes
+HOME_ABSOLUTE_ENCODER = 2
 MAX_VELOCITY = 30.0
 MAX_ACCELERATION = 80.0
 #=INPUT_SCALE
@@ -144,11 +147,12 @@ MAX_ACCELERATION = 80.0
 #LINEAR & ANGULAR
 TYPE = LINEAR
 HOME = 0.0
-HOME_OFFSET = -5.0
+HOME_OFFSET = 0.0
 HOME_SEQUENCE = 1
 HOME_SEARCH_VEL = -6
 HOME_LATCH_VEL = 5
 HOME_IGNORE_LIMITS = yes
+HOME_ABSOLUTE_ENCODER = 2
 MAX_VELOCITY = 60.0
 MAX_ACCELERATION = 80.0
 #=INPUT_SCALE
@@ -180,11 +184,12 @@ MAX_ACCELERATION = 20.0
 #LINEAR & ANGULAR
 TYPE = LINEAR
 HOME = 0.0
-HOME_OFFSET = -5.0
+HOME_OFFSET = 0.0
 HOME_SEQUENCE = 0
 HOME_SEARCH_VEL = -6
 HOME_LATCH_VEL = 5
 HOME_IGNORE_LIMITS = yes
+HOME_ABSOLUTE_ENCODER = 2
 MAX_VELOCITY = 30.0
 MAX_ACCELERATION = 20.0
 #=INPUT_SCALE
