--- a/configs/by_machine/ChangDian_3Axis/ChangDian_3Axis_sim.ini
+++ b/configs/by_machine/ChangDian_3Axis/ChangDian_3Axis_sim.ini
@@ -4,8 +4,8 @@
 [EMC]
 VERSION = 1.1
 MACHINE = ILAM510C_3Axis
-#DEBUG = 0x7FFFFFFF
-DEBUG = 0
+DEBUG = 0x7FFFFFFF
+#DEBUG = 0
 
 [DISPLAY]
 DISPLAY = qtvcp qt_huirui_3axis
@@ -71,6 +71,8 @@ LINEAR_UNITS = mm
 ANGULAR_UNITS = degree
 MAX_LINEAR_VELOCITY = 30.00
 DEFAULT_LINEAR_VELOCITY = 10.00
+#NO_FORCE_HOMING = 1
+#POSITION_FILE = position.txt
 
 [HAL]
 HALUI = halui
@@ -103,13 +105,14 @@ MAX_ACCELERATION = 80.0
 [JOINT_0]
 #LINEAR & ANGULAR
 TYPE = LINEAR
-HOME = 0.0
+HOME = 5.0
 HOME_OFFSET = -5.00000
 HOME_SEARCH_VEL = 20.000000
 HOME_LATCH_VEL = 10.000
 HOME_SEQUENCE = 1
 HOME_USE_INDEX = NO
 HOME_IGNORE_LIMITS = NO
+#HOME_ABSOLUTE_ENCODER = 2
 #HOME_IS_SHARED = 0
 MAX_VELOCITY = 30.0
 MAX_ACCELERATION = 80.0
@@ -138,6 +141,7 @@ HOME_LATCH_VEL = 10.00
 HOME_SEQUENCE = 1
 HOME_USE_INDEX = NO
 HOME_IGNORE_LIMITS = NO
+#HOME_ABSOLUTE_ENCODER = 2
 MAX_VELOCITY = 60.0
 MAX_ACCELERATION = 80.0
 #=INPUT_SCALE
@@ -165,6 +169,7 @@ HOME_LATCH_VEL = 10.00
 HOME_SEQUENCE = 1
 HOME_USE_INDEX = NO
 HOME_IGNORE_LIMITS = NO
+#HOME_ABSOLUTE_ENCODER = 2
 #HOME_IS_SHARED = 0
 MAX_VELOCITY = 30.0
 MAX_ACCELERATION = 20.0
