--- a/configs/sim/qtvcp_screens/qtaxis.ini
+++ b/configs/sim/qtvcp_screens/qtaxis.ini
@@ -219,8 +219,8 @@ KINEMATICS = trivkins
 JOINTS = 3
 
 [AXIS_X]
-MIN_LIMIT = -40.0
-MAX_LIMIT = 40.0
+MIN_LIMIT = -5
+MAX_LIMIT = 100
 MAX_VELOCITY = 5
 MAX_ACCELERATION = 50.0
 
@@ -234,22 +234,22 @@ MAX_ACCELERATION =              50.0
 BACKLASH = 0.000
 INPUT_SCALE =                   4000
 OUTPUT_SCALE = 1.000
-MIN_LIMIT =                     -40.0
-MAX_LIMIT =                     40.0
+MIN_LIMIT =                     -5
+MAX_LIMIT =                     100
 FERROR = 0.050
 MIN_FERROR = 0.010
-HOME_OFFSET =                    0.0
+HOME_OFFSET =                    1.0
 HOME_SEARCH_VEL =                20.0
 HOME_LATCH_VEL =                 20.0
-HOME_USE_INDEX =                 NO
-HOME_IGNORE_LIMITS =             NO
+HOME_USE_INDEX =                 False
+HOME_IGNORE_LIMITS =             False
 HOME_SEQUENCE = 1
-HOME_IS_SHARED = 1
+#HOME_IS_SHARED = 1
 
 # Second axis
 [AXIS_Y]
-MIN_LIMIT = -40.0
-MAX_LIMIT = 40.0
+MIN_LIMIT = -5
+MAX_LIMIT = 100
 MAX_VELOCITY = 5
 MAX_ACCELERATION = 50.0
 
@@ -263,21 +263,21 @@ MAX_ACCELERATION =              50.0
 BACKLASH = 0.000
 INPUT_SCALE =                   4000
 OUTPUT_SCALE = 1.000
-MIN_LIMIT =                     -40.0
-MAX_LIMIT =                     40.0
+MIN_LIMIT =                     -5
+MAX_LIMIT =                     100
 FERROR = 0.050
 MIN_FERROR = 0.010
-HOME_OFFSET =                    0.0
+HOME_OFFSET =                    1.0
 HOME_SEARCH_VEL =                20.0
 HOME_LATCH_VEL =                 20.0
-HOME_USE_INDEX =                 NO
-HOME_IGNORE_LIMITS =             NO
-HOME_SEQUENCE = 1
+HOME_USE_INDEX =                 False
+HOME_IGNORE_LIMITS =             False
+HOME_SEQUENCE = 2
 
 # Third axis
 [AXIS_Z]
-MIN_LIMIT = -8.0
-MAX_LIMIT = 0.12
+MIN_LIMIT = -5
+MAX_LIMIT = 100
 MAX_VELOCITY = 5
 MAX_ACCELERATION = 50.0
 
@@ -291,21 +291,21 @@ MAX_ACCELERATION =              50.0
 BACKLASH = 0.000
 INPUT_SCALE =                   4000
 OUTPUT_SCALE = 1.000
-MIN_LIMIT =                     -8.0
+MIN_LIMIT =                     -5
 
 # Normally the Z max should be 0.000!
 # The only reason it's greater than 0 here is so that the splash screen
 # gcode will run.
-MAX_LIMIT =                     0.12
+MAX_LIMIT =                     100
 
 FERROR = 0.050
 MIN_FERROR = 0.010
 HOME_OFFSET =                    1.0
 HOME_SEARCH_VEL =                20.0
 HOME_LATCH_VEL =                 20.0
-HOME_USE_INDEX =                 NO
-HOME_IGNORE_LIMITS =             NO
+HOME_USE_INDEX =                 False
+HOME_IGNORE_LIMITS =             False
 HOME_SEQUENCE = 0
-HOME_IS_SHARED = 1
+#HOME_IS_SHARED = 1
 
 # section for main IO controller parameters
